<resources>
    <!-- This is a string resources file where you should specify all your UI strings -->
    <string name="app_name">MatchMaker</string>
    <string name="welcome">Welcome to MatchMaker!</string>

    <!-- Added to satisfy references in pref_general -->
    <string name="pref_title_system_sync_settings">SyncSettings</string>
    <string name="pref_description_social_recommendations">SocialRecsDesc</string>
    <string name="pref_title_social_recommendations">SocialRecsTitle</string>
    <string name="pref_default_display_name">DefaultDisplayName</string>
    <string name="pref_title_display_name">TitleDisplayName</string>
    <string name="pref_title_add_friends_to_messages">AddFriendsToMsgs</string>
    <string-array name="pref_example_list_titles">
        <item>Example1</item>
        <item>Example2</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>ExampleValue1</item>
        <item>ExampleValue2</item>
    </string-array>

    <!-- Added to satisfy references in pref_headers -->
    <string name="pref_header_general">HeaderGeneral</string>
    <string name="pref_header_notifications">HeaderNotifications</string>
    <string name="pref_header_data_sync">HeaderDataSync</string>

    <!-- Added to satisfy references in pref_notifications -->
    <string name="pref_title_new_message_notifications">NewMsgNotif</string>
    <string name="pref_title_ringtone">RingtoneTitle</string>
    <string name="pref_title_vibrate">TitleVibrate</string>
    <string name="pref_ringtone_silent">0</string>

    <!-- for the match preferences activity/ fragment -->
    <string name="pref_sport_label">Sport or Activity</string>
    <string name="pref_sport_key" translatable="false">sport</string>
    <string name="pref_sport_default" translatable="false">Football</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_account">userAccount</string>
    <string name="go_to_account_info">Go to Account</string>

    <string name="match_preferences">Match Preferences</string>
    <string name="button_send">Search Matches</string>
    <string name="select_preferences_message">Select Your Activity Preferences</string>

    <string-array name="sports_list_values">
        <item>Football</item>
        <item>Gaelic Football</item>
        <item>Hurling</item>
        <item>Running</item>
        <item>Tennis</item>
        <item>Badminton</item>
    </string-array>
    <item name="sports_spinner" type="id">Choose Your Activity</item>

    <string name="textview">TextView</string>

    <string name="time_hint">Select Time</string>
    <string name="date_hint">Select Date</string>
    <string name="preferences_send">Find a Match!</string>
    <string name="nickname">Enter nickname</string>
    <string name="preferences">What are your preferences?</string>
    <string name="title_activity_signup">Signup</string>

    <string name="create_match">Create your match!</string>
    <string name="create_match_message">Welcome to the Event Creator Page!</string>
    <string name="select_location">Select Location</string>
    <string name="crate_event_name">Input Event Name</string>

    <!-- add to satisify references in search results page-->
    <string name="eventsListButton">Search Results</string>
    <string name="searchResultsHeader">Events you might like</string>
    <string name="resultsFragEdit">filter results</string>
    <string name="event_header">EVENT: Tennis in Sandymount, 13/11 @ 6pm</string>
    <string-array name="dummyList">
        <item>Monday Football</item>
        <item>Tuesday Golf</item>
        <item>Wednesday Tennis</item>
        <item>Friday Rugby</item>
        <item>Tuesday Basketball</item>
        <item>Friday Frisbee</item>
        <item>Thursday Tennis</item>
        <item>Saturday Gaelic</item>
        <item>Wednesday Football</item>
        <item>Sunday Rugby</item>
    </string-array>

    <string name="current_info">Your current information is displayed below</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="update_info">Update Info</string>
    <string name="upcomming_events">Your upcomming events are:</string>
</resources>
