<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:parentActivityName=".ProfileActivity"
    tools:context="com.matchmaker.matchmaker.ProfileActivity"
    android:id="@+id/profile_edit">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textviewUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Display Email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:onClick="update_user_info"
        android:text="@string/update_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <RelativeLayout
        android:id="@+id/boxes"
        android:layout_width="368dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname">

        <CheckBox
            android:id="@+id/checkBox_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:text="Football" />

        <CheckBox
            android:id="@+id/checkBox_gaelic_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBox_football"
            android:layout_alignBottom="@+id/checkBox_football"
            android:layout_centerHorizontal="true"
            android:text="Gaelic Football" />

        <CheckBox
            android:id="@+id/checkBox_tennis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/checkBox_football"
            android:layout_below="@+id/checkBox_football"
            android:layout_marginStart="50dp"
            android:layout_marginTop="26dp"
            android:text="Tennis" />

        <CheckBox
            android:id="@+id/checkBox_hurling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBox_gaelic_football"
            android:layout_alignBottom="@+id/checkBox_gaelic_football"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/checkBox_gaelic_football"
            android:text="Hurling" />

        <CheckBox
            android:id="@+id/checkBox_badminton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBox_tennis"
            android:layout_alignBottom="@+id/checkBox_tennis"
            android:layout_marginStart="41dp"
            android:layout_toEndOf="@+id/checkBox_tennis"
            android:text="Badminton" />
    </RelativeLayout>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/displayData"
        android:layout_width="336dp"
        android:layout_height="79dp"
        android:layout_marginTop="12dp"
        android:text="Display user data"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="To update your information, please enter the following details"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayData" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_info"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="20dp"
        android:onClick="back_to_profile"
        android:text="@string/back_to_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />


</android.support.constraint.ConstraintLayout>
